--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">        
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ciclos</title>
+    <meta name="robots" content="index">   
+    <title>PURO SABOR - Nuestros Productos</title>
 </head>
 <body>
-    <h1>Trabajo Complementario</h1>
-    <h2>Ciclos e iteraciones</h2>
+    <h1> Entregable Numero 1 </h1>           
     <script src="js/miarchivo.js"></script>    
 </body>
 </html>
