--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>PURO SABOR - Nuestros Productos</title>
 </head>
 <body>
-    <h1> Entregable Numero 1 </h1>           
-    <script src="js/miarchivo.js"></script>    
+    <h1> Desafío complementario </h1> 
+    <h2>Incorporando arrays</h2>          
+    <script src="js/miarchivo.js"></script>       
 </body>
 </html>
 
