--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta  name ="description" content = "En este sitio web encontrarás alimentos saludables, ricos en nutrientes, naturales y congelados. Todo listo para facilitar tu vida diaria">
     <meta  name ="palabras clave" content = "alimentos saludables, ricos, sanos, congelados">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>
     <link rel="stylesheet" href="css/estilo.css">
     <link  rel ="icon" href ="resources/logo.jpg" ></link>
     <link  rel ="reconnection" href =" https://fonts.gstatic.com " crossorigin>
@@ -47,32 +49,33 @@
                 </div>
             </div>
         </nav>
-    </header> 
-    <main>
+    </header>
 
-    </main class="medios">
+    <main class="medios">
+
         <h2>CONTACTENOS</h2>
+        
         <form id= "form" class="needs-validation" novalidate>
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label for="validationTooltip01">Nombre</label>
                 <input type="text" class="form-control" id="validationTooltip01" placeholder="Escriba su Nombre" required>
-                <div class="valid-tooltip">
-                  ¡Bien hecho!
+                <div class="invalid-feedback">
+                  Complete el dato nombre
                 </div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="validationTooltip02">Apellido</label>
                 <input type="text" class="form-control" id="validationTooltip02" placeholder="Escriba su Apellido" required>
-                <div class="valid-tooltip">
-                  ¡Bien hecho!
+                <div class="invalid-feedback">
+                  Complete el dato apellido
                 </div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="validationTooltipUsername">Email</label>
                 <div class="input-group">                  
                   <input type="text" class="form-control" id="validationTooltipUsername" placeholder="Escriba su correo electrónico" aria-describedby="validationTooltipUsernamePrepend" required>
-                  <div class="invalid-tooltip">
+                  <div class="invalid-feedback">
                     Por favor elige un correo válido
                   </div>
                 </div>
@@ -82,22 +85,22 @@
                 <div class="col-md-6 mb-3">
                     <label for="validationTooltip03">Ciudad</label>
                     <input type="text" class="form-control" id="validationTooltip03" placeholder="Ciudad" required>
-                    <div class="invalid-tooltip">
+                    <div class="invalid-feedback">
                         Por favor seleccione una ciudad válida.
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
                     <label for="validationTooltip04">Provincia</label>
                     <input type="text" class="form-control" id="validationTooltip04" placeholder="Provincia" required>
-                    <div class="invalid-tooltip">
+                    <div class="invalid-feedback">
                         Por favor seleccione una provincia válida.
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
                     <label for="validationTooltip05">Número de Telefono</label>
                     <input type="number" class="form-control" id="validationTooltip05" placeholder="Indique su numero de telefono">
-                    <div class="invalid-tooltip">
-                        Por favor ingrese un numero válido.
+                    <div class="invalid-feedback">
+                        Por favor ingrese un numero de telefono válido.
                     </div>
                 </div>
             </div>        
@@ -106,10 +109,7 @@
                     <textarea class="form-input" id= "validationTooltip06" placeholder="Deje su mensaje"></textarea>
                 </div>
             </div>
-            <button class="btn btn-primary" type="submit">Enviar</button>        
-            <div class="text-success">
-                <h6 class="my-0">A la brevedad nos estaremos comunicando con Usted. ¡Gracias por visitarnos!</h6>
-            </div>     
+            <button id="btnEnviar" class="btn btn-primary" type="submit">Enviar</button> 
         </form>        
     </main>  
     <footer class="font-small">
