--- a/contacto.html
+++ b/contacto.html
@@ -7,8 +7,6 @@
     <meta  name ="description" content = "En este sitio web encontrarás alimentos saludables, ricos en nutrientes, naturales y congelados. Todo listo para facilitar tu vida diaria">
     <meta  name ="palabras clave" content = "alimentos saludables, ricos, sanos, congelados">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>
     <link rel="stylesheet" href="css/estilo.css">
     <link  rel ="icon" href ="resources/logo.jpg" ></link>
     <link  rel ="reconnection" href =" https://fonts.gstatic.com " crossorigin>
@@ -54,70 +52,84 @@
     <main class="medios">
 
         <h2>CONTACTENOS</h2>
+
+        <div class="col-md-7 col-lg-8">
         
-        <form id= "form" class="needs-validation" novalidate>
-            <div class="form-row">
-              <div class="col-md-4 mb-3">
-                <label for="validationTooltip01">Nombre</label>
-                <input type="text" class="form-control" id="validationTooltip01" placeholder="Escriba su Nombre" required>
-                <div class="invalid-feedback">
-                  Complete el dato nombre
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="validationTooltip02">Apellido</label>
-                <input type="text" class="form-control" id="validationTooltip02" placeholder="Escriba su Apellido" required>
-                <div class="invalid-feedback">
-                  Complete el dato apellido
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="validationTooltipUsername">Email</label>
-                <div class="input-group">                  
-                  <input type="text" class="form-control" id="validationTooltipUsername" placeholder="Escriba su correo electrónico" aria-describedby="validationTooltipUsernamePrepend" required>
-                  <div class="invalid-feedback">
-                    Por favor elige un correo válido
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="form-row">
-                <div class="col-md-6 mb-3">
-                    <label for="validationTooltip03">Ciudad</label>
-                    <input type="text" class="form-control" id="validationTooltip03" placeholder="Ciudad" required>
-                    <div class="invalid-feedback">
-                        Por favor seleccione una ciudad válida.
+            <form id= "form" class="needs-validation" novalidate>
+
+                <div class="row g-3">
+
+                   <div class="col-sm-6">             
+                        <label for="validationTooltip01">Nombre</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="Escriba su Nombre" required>
+                        <div class="invalid-feedback">
+                            Complete el dato nombre           
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <label for="validationTooltip02">Apellido</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="Escriba su Apellido" required>
+                        <div class="invalid-feedback">
+                           Complete el dato apellido
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <label for="validationTooltipUsername">Email</label>                  
+                        <input type="email" class="form-control" id="email" placeholder="Escriba su correo electrónico" aria-describedby="validationTooltipUsernamePrepend" required>
+                        <div class="invalid-feedback">
+                            Por favor elige un correo válido
+                        </div>
+                    </div>      
+
+                    <div class="col-12">
+                        <label for="validationTooltip03">Ciudad</label>
+                        <input type="text" class="form-control" id="city" placeholder="Ciudad" required>
+                        <div class="invalid-feedback">
+                            Por favor seleccione una ciudad válida.
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <label for="validationTooltip04">Provincia</label>
+                        <input type="text" class="form-control" id="state" placeholder="Provincia" required>
+                        <div class="invalid-feedback">
+                            Por favor seleccione una provincia válida.
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <label for="validationTooltip05">Número de Telefono</label>
+                        <input type="number" class="form-control" id="phoneNumber" placeholder="Indique su numero de telefono">
+                        <div class="invalid-feedback">
+                           Por favor ingrese un numero de telefono válido.
+                        </div>
+                    </div>
+        
+                    <div class="col-12">
+                        <textarea class="form-control" id="message" placeholder="Deje su mensaje"></textarea>
                     </div>
                 </div>
-                <div class="col-md-3 mb-3">
-                    <label for="validationTooltip04">Provincia</label>
-                    <input type="text" class="form-control" id="validationTooltip04" placeholder="Provincia" required>
-                    <div class="invalid-feedback">
-                        Por favor seleccione una provincia válida.
-                    </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <label for="validationTooltip05">Número de Telefono</label>
-                    <input type="number" class="form-control" id="validationTooltip05" placeholder="Indique su numero de telefono">
-                    <div class="invalid-feedback">
-                        Por favor ingrese un numero de telefono válido.
-                    </div>
-                </div>
-            </div>        
-            <div class="form-row">
-                <div class="col-md-3 mb-3">
-                    <textarea class="form-input" id= "validationTooltip06" placeholder="Deje su mensaje"></textarea>
-                </div>
-            </div>
-            <button id="btnEnviar" class="btn btn-primary" type="submit">Enviar</button> 
-        </form>        
+
+                <hr class="my-4">         
+                <button id="btnEnviar" class="w-100 btn btn-primary btn-lg" type="submit">Enviar</button> 
+
+            </form>
+        </div>        
     </main>  
-    <footer class="font-small">
-        <div class="text-center py-3">
-            © 2022 Copyright: Puro Sabor
-        </div>
+    <footer class="my-5 pt-5 text-muted text-xl-center text-small">
+      <p class="mb-1">&copy; 2022 Puro Sabor</p>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Privacy</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Support</a></li>
+      </ul>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/events.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>
 </body>
 </html>
