--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta  name ="description" content = "En este sitio web encontrarás alimentos saludables, ricos en nutrientes, naturales y congelados. Todo listo para facilitar tu vida diaria">
-    <meta  name ="palabras clave" content = "alimentos saludables, ricos, sanos, congelados">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <meta  name ="palabras clave" content = "alimentos saludables, ricos, sanos, congelados">   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
     <link rel="stylesheet" href="css/estilo.css">
-    <link  rel ="icon" href ="resources/logo.jpg" ></link>
+    <link  rel ="icon" href ="resources/logo.jpg" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link  rel ="reconnection" href =" https://fonts.gstatic.com " crossorigin>
     <link rel ="reconnection" href =" https://fonts.googleapis.com ">
     <link  href =" https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&display=swap " rel ="hoja de estilo ">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>
+    <link rel="stylesheet" href="sweetalert2.min.css">    
     <title>Tienda online PURO SABOR</title>
 </head>
 <body>
@@ -112,7 +110,7 @@
                         <div class="col carrito-total"></div>
                     </div>
                      
-                    <button class="btn btn-carrito" type="button">Aceptar</button>
+                    <button id="btnAceptar" class="btn btn-carrito" type="button">Finalizar compra</button>
                 </div>
             </div>
             <!-- Boton para desplegar la barra lateral -->
@@ -227,9 +225,7 @@
                 <td>Cantidad</td>
                 <td>Precio</td>
                 <td>
-                    <button class="trash-icon" id="delete-item">
-                        <i class="fa-solid fa-trash"></i>
-                    </button>
+                    <button id="delete-item" class="trash-icon"><i class="fa-solid fa-trash"></i></button>
                 </td>
             </tr>
         </template>
@@ -245,8 +241,8 @@
             © 2022 Copyright: Puro Sabor
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script defer src="js/compra.js"></script>    
+    <script defer src="js/compra.js"></script> 
+    <script src="sweetalert2.all.min.js"></script>  
 </body>
 </html>
